--- a/client/src/components/dashboard/dashboard.css
+++ b/client/src/components/dashboard/dashboard.css
@@ -97,3 +97,49 @@ body {
         margin-left: -15rem;
     }
 }
+
+.settings-card {
+    width: 10rem;
+    height: 10rem;
+    margin: 0.5rem 0.5rem 0.5rem 0.5rem;
+    position: relative;
+    text-align: center;
+    transition: 0.25s;
+}
+
+.settings-card:hover {
+    border: 2px solid #5F91E2;
+    transition: 0.25s;
+    cursor: pointer;
+}
+
+.card-icon {
+    margin-top: 1.4rem;
+    font-size: 3.5rem;
+}
+
+.card-active {
+    border: 2px solid #5F91E2;
+}
+
+.edit-container {
+    border: 2px solid #DFDFDF;
+    border-radius: 5px;
+    padding-bottom: 10px;
+}
+
+.edit-container h4 {
+    padding-top: 8px;
+}
+
+.icon-edit {
+    color: #000;
+    float: right;
+    transition: 0.25s;
+}
+
+.icon-edit:hover {
+    color: #5F91E2;
+    transition: 0.25s;
+    cursor: pointer;
+}
